src/main/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-app
  labels:
    app: jhipster-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-app
      version: 'v1'
  template:
    metadata:
      labels:
        app: jhipster-app
        version: 'v1'
        BUILD_NUMBER: '91'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jhipster-app
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: jhipster-app
          image: homek8s/team-1:latest
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
